<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity2">
    <!--Code for recyclerviewexample Label-->
    <!--Code below used for Email Address Tab Customisation-->

    <!--Code below used for Password Tab Customisation-->

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_email_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide3"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_password_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide4"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide1"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.377" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="fitnus_logo"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide2"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide1"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/fitnus_icon_removebg_preview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="@drawable/running_background"
        android:text="@string/login_button"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide4"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide3"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/not_registered"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/not_registered"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide4"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide2"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="@+id/verticalGuide1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide3"
        app:layout_constraintVertical_bias="0.945" />

    <TextView
        android:id="@+id/registration_button"
        android:layout_width="93dp"
        android:layout_height="20dp"
        android:text="@string/click_here"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/not_registered"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuide2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/not_registered"
        app:layout_constraintTop_toTopOf="@+id/not_registered"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="71dp"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="341dp"
        app:layout_constraintGuide_percent="0.8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/login_gym_picture"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuide3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuide2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="248dp"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="544dp"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuide4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>